--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
     <link rel="manifest" href="favicon/site.webmanifest"><!-- Assets -->
+    <link rel="preload" href="images/tild6561-6661-4531-b337-653131393863__1.jpg" as="image">
     <script src="https://neo.tildacdn.com/js/tilda-fallback-1.0.min.js" async charset="utf-8"></script>
     <link rel="stylesheet" href="css/tilda-grid-3.0.min.css" type="text/css" media="all" onerror="this.loaderr='y';"/>
     <link rel="stylesheet" href="css/tilda-blocks-page55543185.min.css?t=1727427672" type="text/css" media="all"
